--- a/Sexta Clase/Sexta Clase.html
+++ b/Sexta Clase/Sexta Clase.html
@@ -2,20 +2,44 @@
 <html>
     <head>
         <title> Tabla de datos </title>
+    </head><!Doctype html>
+<html>
+    <head>
+        <title> Tabla de datos </title>
+<style>
+#Paso1 {
+Backgroun-color: GreenYellow;
+padding: 50px;
+Text-Align: Left;
+}
+
+#Paso2 {
+Backgroun-color: GreenYellow;
+padding: 50px;
+Text-Align: Left;
+}
+
+#Paso3 {
+Backgroun-color: GreenYellow;
+padding: 50px;
+Text-Align: Left;
+}
+
+</style>
     </head>
     <body>
     <center>
     <body style="background-color: LightGreen"
         <form>
-		    <div>
                 <!--Step 1 your details-->
-			    <b><p>Step 1:Your details</p></b>
-                Name:<input type="text" name="Name:" placeholder="Nombre"><br>
+		    <div id="Paso1">
+				<b><p>Step 1:Your details</p></b>
+			    Name:<input type="text" name="Name:" placeholder="Nombre"><br>
                 Email:<input type="text" name="Name:"><br>
 			    Phone:<input type="tel" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" maxlength="10"><br>
 		    </div>
-		    <div>
-                <!--Step 2 Delivery address-->
+		       <!--Step 2 Delivery address-->
+			<div id="Paso2">
            	<b><p>Step2:Delivery address</p></b>
                 Address:<input type="text" name="Name:"><br>
                 Post Code:<input type="text" name="Name:"><br>
@@ -28,8 +52,8 @@
                 </select>
                 <br>
 		    </div>
-		    <div>
             <!--Step 3 Card details-->
+			<div id="Paso1">
 			<b><p>Step 3:Card details</p></b>
                	Card Number:<input type="text" name="Name:"><br>
                	Security Code:<input type="text" name="Name:"><br>
@@ -39,3 +63,4 @@
     </center>
     </body>
 </html>
+   
